@@ -62,10 +62,87 @@ module TestTrait
       handles: [ :toggle!, :not, :set!, :unset!, :value ],
     }
 
+    has important: {
+      is: :rw,
+      default: nil,
+      traits: MooseX::Traits::RescueToNil,
+      handles: {
+        plus: :+,
+        minus: :-,
+      }
+    }
+
+    has important2: {
+      is: :rw,
+      default: nil,
+      traits: MooseX::Traits::RescueToZero,
+      handles: {
+        plus2: :+,
+        minus2: :-,
+      }
+    }
+
+    has phrase: {
+      is: :rw,
+      default: nil,
+      traits: MooseX::Traits::RescueToEmptyString,
+      handles: {
+        upcase_phrase: :upcase
+      }
+    }
+
     def build_lazy_counter
       0
     end
   end
+
+  class ComplexExample
+    include MooseX
+    include MooseX::Types
+
+    has surname_name: {
+      is: :rw,
+      isa: isMaybe(isTuple(String, String)),
+      default: nil,
+      traits: [ MooseX::Traits::RescueToEmptyString, MooseX::Traits::Pair ],
+      handles: {
+        surname: :first,
+        name: :second,
+        :surname= => :first=,
+        :name= => :second=,
+        surname_and_name: { join: ->{", "} }
+      }
+    }
+  end
+end
+
+describe TestTrait::ComplexExample do
+  it "should be possible call surname_and_name" do
+    ce = TestTrait::ComplexExample.new(surname_name: ["Asimov", "Isaac"])
+    ce.name.should == "Isaac"
+    ce.surname_and_name.should == "Asimov, Isaac"
+  end
+
+  it "should be possible call surname_and_name if nil" do
+    ce = TestTrait::ComplexExample.new(surname_name: nil)
+    ce.name.should == ""    
+    ce.surname_and_name.should == ", "
+  end  
+
+  it "should be possible call surname_and_name if nil 2" do
+    ce = TestTrait::ComplexExample.new(surname_name: nil)
+    ce.name.should == ""    
+    ce.surname_and_name.should == ", "
+
+    ce.name= "Isaac"
+    ce.surname_and_name.should == ", Isaac"
+    ce.surname= "Asimov"
+    ce.surname_and_name.should == "Asimov, Isaac"
+    
+    ce.surname_name= nil
+    ce.name.should == ""    
+    ce.surname_and_name.should == ", "    
+  end    
 end
 
 describe TestTrait::MyHomePage do
@@ -107,7 +184,8 @@ describe TestTrait::MyHomePage do
     page.counter.should == 1
 
     page.reset_counter!
-    page.counter.should be_zero
+    page.inc_counter
+    page.counter.should == 1
   end  
 
   it "should increase counter_rw by default value" do
@@ -194,7 +272,53 @@ describe TestTrait::MyHomePage do
 
     if page.value 
       raise "should act as a false value"
-    end    
+    end
+  end
+
+  it "important should be converted to integer" do
+    page = TestTrait::MyHomePage.new(important: 1)
+    page.important.should       == 1
+    page.plus(1).should         == 2
+    page.minus(4).should        == -3
+    (page.important + 5).should == 6
   end 
+
+  it "important should be converted to integer returning nil" do
+    page = TestTrait::MyHomePage.new(important: nil)
+    page.important.should        == nil 
+    page.plus(1).should          == nil
+    page.minus(4).should         == nil
+    (page.important + 5).should  == nil
+  end
+
+  it "important2 should be converted to integer" do
+    page = TestTrait::MyHomePage.new(important2: 1)
+    page.important2.should       == 1
+    page.plus2(1).should         == 2
+    page.minus2(4).should        == -3
+    (page.important2 + 5).should == 6
+  end 
+
+  it "important2 should be converted to integer returning 0" do
+    page = TestTrait::MyHomePage.new(important2: nil)
+    page.important2.should        be_zero
+    page.plus2(1).should          == 0
+    page.minus2(4).should         == 0
+    (page.important2 + 5).should  == 0
+  end
+
+  it "phrase should be converted to String" do
+    page = TestTrait::MyHomePage.new(phrase: "hello")
+    page.phrase.should           == "hello"
+    page.upcase_phrase           == "HELLO"
+    (page.upcase_phrase.concat ", WORLD").should == "HELLO, WORLD"
+  end 
+
+  it "phrase should returning empty string" do
+    page = TestTrait::MyHomePage.new(phrase: nil)
+    page.phrase.should           be_eql? ""
+    page.upcase_phrase           == ""
+    (page.upcase_phrase.concat ", WORLD").should == ", WORLD"
+  end        
 end  
   
