@@ -1,3 +1,5 @@
+  - improvements in examples and internals
+  - add basic suport to traits #24
   - basic support to plugin #23
 
 0.0.18 - 2013-02-12
